Updated vagrant files

--- a/inventory.ini
+++ b/inventory.ini
@@ -1,6 +1,6 @@
 [servers]
 ; kafkaprod[01:05:2].ipa.liberty.edu
-192.168.33.33 ansible_ssh_user=vagrant ansible_ssh_private_key_file=~/.ssh/id_rsa 
-192.168.33.34
-192.168.33.35
+192.168.33.33 ansible_host=127.0.0.1 ansible_port=2222 ansible_user='vagrant' ansible_ssh_private_key_file='/home/pgibbs1/hashicorp_servers/.vagrant/machines/server1/virtualbox/private_key'
+192.168.33.34 ansible_host=127.0.0.1 ansible_port=2200 ansible_user='vagrant' ansible_ssh_private_key_file='/home/pgibbs1/hashicorp_servers/.vagrant/machines/server2/virtualbox/private_key'
+192.168.33.35 ansible_host=127.0.0.1 ansible_port=2201 ansible_user='vagrant' ansible_ssh_private_key_file='/home/pgibbs1/hashicorp_servers/.vagrant/machines/server3/virtualbox/private_key'
 [clients]
