--- a/install_servers/tasks/consul.yml
+++ b/install_servers/tasks/consul.yml
@@ -1,1 +1,36 @@
 ---
+- name: Install Consul
+  ansible.builtin.dnf:
+    name: consul
+    state: latest
+
+- name: Add Firewall rules
+  ansiible.builtin.firewalld:
+    state: "enabled"
+    port: "{{ item }}"
+    immediate: "yes"
+    permanent: "yes"
+  loop:
+    - 8300/tcp
+    - 8301/tcp
+    - 8302/tcp
+    - 8301/udp
+    - 8302/udp
+    - 8500/tcp
+    - 8503/tcp
+    - 8600/tcp
+    - 8600/udp
+
+- name: copy consul file
+  ansiible.builtin.template:
+    src: consul.hcl
+    dest: /etc/consul.d/consul.hcl
+    owner: "consul"
+    group: "consul"
+    mode: "0640"
+
+- name: Start and Enable Consul
+  ansible.builtin.systemd:
+    name: consul
+    state: restarted
+    enabled: true
