--- a/install_servers/tasks/main.yml
+++ b/install_servers/tasks/main.yml
@@ -4,4 +4,9 @@
   ansible.builtin.yum_repository:
     name: hashicorp
     description: Hashicorp Repo
-    baseurl: https://rpm.releases.hashicorp.com/RHEL/hashicorp.repo
+    baseurl: https://rpm.releases.hashicorp.com/RHEL/$releasever/$basearch/stable
+    gpgkey: https://rpm.releases.hashicorp.com/gpg
+
+
+- import_tasks: consul.yml
+- import_tasks: nomad.yml
