--- a/vagrantfile
+++ b/vagrantfile
@@ -7,6 +7,7 @@ Vagrant.configure("2") do |config|
         d.name = "server1"
         d.memory = 4096
     end
+    config.vm.network "forwarded_port", guest: 8500, host: 8500
   end
 
   config.vm.define "server2" do |server2|
@@ -16,7 +17,6 @@ Vagrant.configure("2") do |config|
     server2.vm.provider "virtualbox" do |d|
         d.name = "server2"
         d.memory = 4096
-
     end
   end
 
@@ -27,7 +27,6 @@ Vagrant.configure("2") do |config|
     server3.vm.provider "virtualbox" do |d|
         d.name = "server3"
         d.memory = 4096
-
     end
   end
 end
