--- a/vagrantfile
+++ b/vagrantfile
@@ -7,7 +7,7 @@ Vagrant.configure("2") do |config|
         d.name = "server1"
         d.memory = 4096
     end
-    config.vm.network "forwarded_port", guest: 8500, host: 8500
+    server1.vm.network "forwarded_port", guest: 8500, host: 8500
   end
 
   config.vm.define "server2" do |server2|
