--- a/vagrantfile
+++ b/vagrantfile
@@ -8,6 +8,7 @@ Vagrant.configure("2") do |config|
         d.memory = 4096
     end
     server1.vm.network "forwarded_port", guest: 8500, host: 8500
+    server1.vm.network "forwarded_port", guest: 4646, host: 4646
   end
 
   config.vm.define "server2" do |server2|
