Add better startup testing

--- a/install_servers/tasks/consul.yml
+++ b/install_servers/tasks/consul.yml
@@ -23,7 +23,7 @@
 
 - name: Debug Default address
   debug:
-    msg: "It should be a 192 address for local testing {{vars.ansible_all_ipv4_addresses[1]}}"
+    msg: "It should be a 192 address for local testing {{vars.ansible_eth1.ipv4.address}}"
 
 - name: copy consul file
   ansible.builtin.template:
