--- a/vagrantfile
+++ b/vagrantfile
@@ -9,6 +9,7 @@ Vagrant.configure("2") do |config|
     end
     server1.vm.network "forwarded_port", guest: 8500, host: 8500
     server1.vm.network "forwarded_port", guest: 4646, host: 4646
+    server1.vm.provision "shell", path: "vagrant_startup.sh"
   end
 
   config.vm.define "server2" do |server2|
@@ -19,6 +20,8 @@ Vagrant.configure("2") do |config|
         d.name = "server2"
         d.memory = 4096
     end
+    server2.vm.provision "shell", path: "vagrant_startup.sh"
+
   end
 
   config.vm.define "server3" do |server3|
@@ -29,5 +32,37 @@ Vagrant.configure("2") do |config|
         d.name = "server3"
         d.memory = 4096
     end
+    server3.vm.provision "shell", path: "vagrant_startup.sh"
+  end
+  config.vm.define "client1" do |client1|
+    client1.vm.box = "generic/rhel8"
+    client1.vm.hostname = "client1"
+    client1.vm.network "private_network", ip: "192.168.33.36"
+    client1.vm.provider "virtualbox" do |d|
+        d.name = "client1"
+        d.memory = 4096
+    end
+    client1.vm.provision "shell", path: "vagrant_startup.sh"
+  end
+
+  config.vm.define "client2" do |client2|
+    client2.vm.box = "generic/rhel8"
+    client2.vm.hostname = "client2"
+    client2.vm.network "private_network", ip: "192.168.33.37"
+    client2.vm.provider "virtualbox" do |d|
+        d.name = "client2"
+        d.memory = 4096
+    end
+    client2.vm.provision "shell", path: "vagrant_startup.sh"
+  end
+  config.vm.define "client3" do |client3|
+    client3.vm.box = "generic/rhel8"
+    client3.vm.hostname = "client3"
+    client3.vm.network "private_network", ip: "192.168.33.38"
+    client3.vm.provider "virtualbox" do |d|
+        d.name = "client3"
+        d.memory = 4096
+    end
+    client3.vm.provision "shell", path: "vagrant_startup.sh"
   end
 end
