--- a/main.yml
+++ b/main.yml
@@ -1,12 +1,25 @@
 ---
-- name: Install Nomad and Consuld
-  hosts: all
+- name: Install Nomad and Consul Server
+  hosts: servers
   become: true
   become_user: root
-  remote_user: ansible
+  remote_user: vagrant
   become_method: sudo
  
   roles:
     - role: install_servers
       tags:
         - install_servers
+
+---
+- name: Install Nomad and Consul Client
+  hosts: clients
+  become: true
+  become_user: root
+  remote_user: vagrant
+  become_method: sudo
+ 
+  roles:
+    - role: install_clients
+      tags:
+        - install_clients
