--- a/install_clients/handlers/main.yml
+++ b/install_clients/handlers/main.yml
@@ -1,2 +1,10 @@
 ---
-# handlers file for install_clients
+- name: Restart Consul
+  ansible.builtin.systemd:
+    name: consul
+    state: restarted
+
+- name: Restart Nomad
+  ansible.builtin.systemd:
+    name: nomad
+    state: restarted
