--- a/main.yml
+++ b/main.yml
@@ -1,15 +1,15 @@
----
-- name: Install Nomad and Consul Server
-  hosts: servers
-  become: true
-  become_user: root
-  remote_user: vagrant
-  become_method: sudo
- 
-  roles:
-    - role: install_servers
-      tags:
-        - install_servers
+# ---
+# - name: Install Nomad and Consul Server
+#   hosts: servers
+#   become: true
+#   become_user: root
+#   remote_user: vagrant
+#   become_method: sudo
+
+#   roles:
+#     - role: install_servers
+#       tags:
+#         - install_servers
 
 ---
 - name: Install Nomad and Consul Client
@@ -18,7 +18,7 @@
   become_user: root
   remote_user: vagrant
   become_method: sudo
- 
+
   roles:
     - role: install_clients
       tags:
