--- a/install_clients/vars/main.yml
+++ b/install_clients/vars/main.yml
@@ -1,3 +1,6 @@
 ---
 # vars file for install_clients
-podman_plugin_url: https://releases.hashicorp.com/nomad-driver-podman/0.4.2/nomad-driver-podman_0.4.2_linux_amd64.zip
+cni_archive: https://github.com/containernetworking/plugins/releases/download/v1.3.0/cni-plugins-linux-amd64-v1.3.0.tgz
+podman_plugin_url: https://releases.hashicorp.com/nomad-driver-podman/0.5.1/nomad-driver-podman_0.5.1_linux_amd64.zip
+apps:
+  - grafana
