--- a/vagrantfile
+++ b/vagrantfile
@@ -1,8 +1,8 @@
 Vagrant.configure("2") do |config|
   config.vm.define "server1" do |server1|
-    server1.vm.box = "generic/rhel8"
+    server1.vm.box = "generic/rhel9"
     server1.vm.hostname = "server1"
-    server1.vm.network "private_network", ip: "192.168.33.33"
+    server1.vm.network "private_network", ip: "192.168.56.56"
     server1.vm.provider "virtualbox" do |d|
         d.name = "server1"
         d.memory = 4096
@@ -13,9 +13,9 @@ Vagrant.configure("2") do |config|
   end
 
   config.vm.define "server2" do |server2|
-    server2.vm.box = "generic/rhel8"
+    server2.vm.box = "generic/rhel9"
     server2.vm.hostname = "server2"
-    server2.vm.network "private_network", ip: "192.168.33.34"
+    server2.vm.network "private_network", ip: "192.168.56.34"
     server2.vm.provider "virtualbox" do |d|
         d.name = "server2"
         d.memory = 4096
@@ -25,9 +25,9 @@ Vagrant.configure("2") do |config|
   end
 
   config.vm.define "server3" do |server3|
-    server3.vm.box = "generic/rhel8"
+    server3.vm.box = "generic/rhel9"
     server3.vm.hostname = "server3"
-    server3.vm.network "private_network", ip: "192.168.33.35"
+    server3.vm.network "private_network", ip: "192.168.56.35"
     server3.vm.provider "virtualbox" do |d|
         d.name = "server3"
         d.memory = 4096
@@ -35,9 +35,9 @@ Vagrant.configure("2") do |config|
     server3.vm.provision "shell", path: "vagrant_startup.sh"
   end
   config.vm.define "client1" do |client1|
-    client1.vm.box = "generic/fedora34"
+    client1.vm.box = "generic/rhel9"
     client1.vm.hostname = "client1"
-    client1.vm.network "private_network", ip: "192.168.33.36"
+    client1.vm.network "private_network", ip: "192.168.56.36"
     client1.vm.provider "virtualbox" do |d|
         d.name = "client1"
         d.memory = 4096
@@ -46,9 +46,9 @@ Vagrant.configure("2") do |config|
   end
 
   config.vm.define "client2" do |client2|
-    client2.vm.box = "generic/fedora34"
+    client2.vm.box = "generic/rhel9"
     client2.vm.hostname = "client2"
-    client2.vm.network "private_network", ip: "192.168.33.37"
+    client2.vm.network "private_network", ip: "192.168.56.37"
     client2.vm.provider "virtualbox" do |d|
         d.name = "client2"
         d.memory = 4096
@@ -56,9 +56,9 @@ Vagrant.configure("2") do |config|
     client2.vm.provision "shell", path: "vagrant_startup.sh"
   end
   config.vm.define "client3" do |client3|
-    client3.vm.box = "generic/fedora34"
+    client3.vm.box = "generic/rhel9"
     client3.vm.hostname = "client3"
-    client3.vm.network "private_network", ip: "192.168.33.38"
+    client3.vm.network "private_network", ip: "192.168.56.38"
     client3.vm.provider "virtualbox" do |d|
         d.name = "client3"
         d.memory = 4096
