--- a/vagrantfile
+++ b/vagrantfile
@@ -1,6 +1,6 @@
 Vagrant.configure("2") do |config|
   config.vm.define "server1" do |server1|
-    server1.vm.box = "generic/rhel9"
+    server1.vm.box = "generic/centos9s"
     server1.vm.hostname = "server1"
     server1.vm.network "private_network", ip: "192.168.56.56"
     server1.vm.provider "virtualbox" do |d|
@@ -13,7 +13,7 @@ Vagrant.configure("2") do |config|
   end
 
   config.vm.define "server2" do |server2|
-    server2.vm.box = "generic/rhel9"
+    server2.vm.box = "generic/centos9s"
     server2.vm.hostname = "server2"
     server2.vm.network "private_network", ip: "192.168.56.34"
     server2.vm.provider "virtualbox" do |d|
@@ -25,7 +25,7 @@ Vagrant.configure("2") do |config|
   end
 
   config.vm.define "server3" do |server3|
-    server3.vm.box = "generic/rhel9"
+    server3.vm.box = "generic/centos9s"
     server3.vm.hostname = "server3"
     server3.vm.network "private_network", ip: "192.168.56.35"
     server3.vm.provider "virtualbox" do |d|
@@ -35,7 +35,7 @@ Vagrant.configure("2") do |config|
     server3.vm.provision "shell", path: "vagrant_startup.sh"
   end
   config.vm.define "client1" do |client1|
-    client1.vm.box = "generic/rhel9"
+    client1.vm.box = "generic/centos9s"
     client1.vm.hostname = "client1"
     client1.vm.network "private_network", ip: "192.168.56.36"
     client1.vm.provider "virtualbox" do |d|
@@ -46,7 +46,7 @@ Vagrant.configure("2") do |config|
   end
 
   config.vm.define "client2" do |client2|
-    client2.vm.box = "generic/rhel9"
+    client2.vm.box = "generic/centos9s"
     client2.vm.hostname = "client2"
     client2.vm.network "private_network", ip: "192.168.56.37"
     client2.vm.provider "virtualbox" do |d|
@@ -56,7 +56,7 @@ Vagrant.configure("2") do |config|
     client2.vm.provision "shell", path: "vagrant_startup.sh"
   end
   config.vm.define "client3" do |client3|
-    client3.vm.box = "generic/rhel9"
+    client3.vm.box = "generic/centos9s"
     client3.vm.hostname = "client3"
     client3.vm.network "private_network", ip: "192.168.56.38"
     client3.vm.provider "virtualbox" do |d|
