--- a/vagrantfile
+++ b/vagrantfile
@@ -9,6 +9,8 @@ Vagrant.configure("2") do |config|
     end
     server1.vm.network "forwarded_port", guest: 8500, host: 8500
     server1.vm.network "forwarded_port", guest: 4646, host: 4646
+    server1.vm.network "forwarded_port", guest: 8080, host: 8080
+    server1.vm.network "forwarded_port", guest: 9333, host: 9333
     server1.vm.provision "shell", path: "vagrant_startup.sh"
   end
 
