Complete weed filer

--- a/install_seaweed/tasks/main.yml
+++ b/install_seaweed/tasks/main.yml
@@ -14,8 +14,13 @@
     - 18080/tcp
     - 8080/udp
     - 18080/udp
+    - 8888/tcp
+    - 18888/tcp
+    - 8888/udp
+    - 18888/udp
     - 9102/tcp
     - 9103/tcp
+    - 9104/tcp
     - 16379/tcp
     - 6379/tcp
     - 26379/tcp
