--- a/install_seaweed/handlers/main.yml
+++ b/install_seaweed/handlers/main.yml
@@ -15,6 +15,12 @@
     state: restarted
     enabled: true
 
+- name: Restart weed-filer Service
+  service:
+    name: weed-filer
+    state: restarted
+    enabled: true
+
 - name: Restart redis
   service:
     name: redis
