Add filer to consul

--- a/install_seaweed/handlers/main.yml
+++ b/install_seaweed/handlers/main.yml
@@ -32,3 +32,9 @@
     name: redis-sentinel
     state: restarted
     enabled: true
+
+- name: Restart consul Service
+  service:
+    name: consul
+    state: restarted
+    enabled: true
