--- a/vagrantfile
+++ b/vagrantfile
@@ -1,6 +1,8 @@
 Vagrant.configure("2") do |config|
   config.vm.define "server1" do |server1|
     server1.vm.box = "generic/centos9s"
+    server1.vm.disk :disk, size: "20GB", primary: true
+    server1.vm.disk :disk, size: "20GB", name: "minio"
     server1.vm.hostname = "server1"
     server1.vm.network "private_network", ip: "192.168.56.56"
     server1.vm.provider "virtualbox" do |d|
@@ -9,13 +11,13 @@ Vagrant.configure("2") do |config|
     end
     server1.vm.network "forwarded_port", guest: 8500, host: 8500
     server1.vm.network "forwarded_port", guest: 4646, host: 4646
-    server1.vm.network "forwarded_port", guest: 8080, host: 8080
-    server1.vm.network "forwarded_port", guest: 9333, host: 9333
     server1.vm.provision "shell", path: "vagrant_startup.sh"
   end
 
   config.vm.define "server2" do |server2|
     server2.vm.box = "generic/centos9s"
+    server2.vm.disk :disk, size: "20GB", primary: true
+    server2.vm.disk :disk, size: "20GB", name: "minio"
     server2.vm.hostname = "server2"
     server2.vm.network "private_network", ip: "192.168.56.34"
     server2.vm.provider "virtualbox" do |d|
@@ -28,6 +30,8 @@ Vagrant.configure("2") do |config|
 
   config.vm.define "server3" do |server3|
     server3.vm.box = "generic/centos9s"
+    server3.vm.disk :disk, size: "20GB", primary: true
+    server3.vm.disk :disk, size: "20GB", name: "minio"
     server3.vm.hostname = "server3"
     server3.vm.network "private_network", ip: "192.168.56.35"
     server3.vm.provider "virtualbox" do |d|
@@ -42,7 +46,9 @@ Vagrant.configure("2") do |config|
     client1.vm.network "private_network", ip: "192.168.56.36"
     client1.vm.provider "virtualbox" do |d|
         d.name = "client1"
-        d.memory = 4096
+        d.memory = 12288
+        d.cpus = 4
+
     end
     client1.vm.provision "shell", path: "vagrant_startup.sh"
   end
@@ -53,7 +59,7 @@ Vagrant.configure("2") do |config|
     client2.vm.network "private_network", ip: "192.168.56.37"
     client2.vm.provider "virtualbox" do |d|
         d.name = "client2"
-        d.memory = 4096
+        d.memory = 8192
     end
     client2.vm.provision "shell", path: "vagrant_startup.sh"
   end
