another day new infra

--- a/inventory.ini
+++ b/inventory.ini
@@ -1,9 +1,9 @@
 [servers]
-; kafkaprod[01:05:2].ipa.liberty.edu
-192.168.56.56 ansible_host=127.0.0.1 ansible_port=2222 ansible_user='vagrant' ansible_ssh_private_key_file='/home/bk/lu/hashicorp_servers/.vagrant/machines/server1/virtualbox/private_key'
-192.168.56.34 ansible_host=127.0.0.1 ansible_port=2200 ansible_user='vagrant' ansible_ssh_private_key_file='/home/bk/lu/hashicorp_servers/.vagrant/machines/server2/virtualbox/private_key'
-192.168.56.35 ansible_host=127.0.0.1 ansible_port=2201 ansible_user='vagrant' ansible_ssh_private_key_file='/home/bk/lu/hashicorp_servers/.vagrant/machines/server3/virtualbox/private_key'
-[clients]
-192.168.56.36 ansible_host=127.0.0.1 ansible_port=2202 ansible_user='vagrant' ansible_ssh_private_key_file='/home/bk/lu/hashicorp_servers/.vagrant/machines/client1/virtualbox/private_key'
-192.168.56.37 ansible_host=127.0.0.1 ansible_port=2203 ansible_user='vagrant' ansible_ssh_private_key_file='/home/bk/lu/hashicorp_servers/.vagrant/machines/client2/virtualbox/private_key'
-192.168.56.38 ansible_host=127.0.0.1 ansible_port=2204 ansible_user='vagrant' ansible_ssh_private_key_file='/home/bk/lu/hashicorp_servers/.vagrant/machines/client3/virtualbox/private_key'
+server1
+server2
+server3
+
+[servers:vars]
+ansible_ssh_user=vagrant
+ansible_ssh_common_args='-F ssh.cfg'
+ansible_python_interpreter="/usr/bin/python3"
